# cookiecutter-cpp-lib

./: .gitignore  .travis.yml  Makefile  README.rst  cookiecutter.json  requirements.txt  test.bash
.github/workflows/: test.yml
hooks/: post_gen_project.py
tests/: test_template.py
{{cookiecutter.project_name}}/: CMakeLists.txt
{{cookiecutter.project_name}}/src/: Greeting.cpp  Greeting.hpp  module.cpp  module.hpp
{{cookiecutter.project_name}}/test/: CMakeLists.txt  GreetingTest.cpp
{{cookiecutter.project_slug}}/: .gitignore  CMakeLists.txt  Makefile  README.rst  requirements-dev.txt
{{cookiecutter.project_slug}}/cmake/: {{cookiecutter.lib_name}}-config.cmake.in
{{cookiecutter.project_slug}}/doc/doxygen/: Doxyfile
{{cookiecutter.project_slug}}/doc/sphinx/: conf.py  index.rst
{{cookiecutter.project_slug}}/docs/doxygen/: Doxyfile.in
{{cookiecutter.project_slug}}/include/{{cookiecutter.lib_name}}/: module.hpp
{{cookiecutter.project_slug}}/src/: CMakeLists.txt  module.cpp
{{cookiecutter.project_slug}}/test/: CMakeLists.txt  test_module.cpp
{{cookiecutter.project_slug}}/tests/integration/: CMakeLists.txt  pytest.ini  test_integration.py
{{cookiecutter.project_slug}}/tests/integration/libtest/: CMakeLists.txt  libtest.cpp
{{cookiecutter.project_slug}}/tests/unit/: CMakeLists.txt  test_module.cpp
{{cookiecutter.repo_name}}/: CMakeLists.txt
{{cookiecutter.repo_name}}/src/: hello.hpp
{{cookiecutter.repo_name}}/test/: CMakeLists.txt
